Setup the "Email Us!" Button

--- a/app.json
+++ b/app.json
@@ -15,20 +15,47 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.biglil.pridepay",
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "YOUR_RESERVED_CLIENT_ID"
+        }
+      },
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": ["mailto"]
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.biglil.pridepay",
+      "config": {
+        "googleSignIn": {
+          "apiKey": "YOUR_API_KEY"
+        }
+      },
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "mailto",
+              "host": "biglildev@gmail.com"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
+    }
   }
 }
