--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "expo": "~49.0.11",
+    "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
