--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.5.0",
-    "@react-native-google-signin/google-signin": "^10.0.1",
     "expo": "~49.0.11",
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
@@ -31,7 +30,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "react-native-svg-transformer": "^1.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "private": true,
   "rnpm": {
