--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
