--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "scheme": "myapp",
+    "scheme": "pridepay",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -19,16 +19,12 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@react-native-google-signin/google-signin"
     ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.biglil.pridepay",
-      "config": {
-        "googleSignIn": {
-          "reservedClientId": "YOUR_RESERVED_CLIENT_ID"
-        }
-      },
       "infoPlist": {
         "LSApplicationQueriesSchemes": [
           "mailto"
@@ -41,9 +37,6 @@
       },
       "package": "com.biglil.pridepay",
       "config": {
-        "googleSignIn": {
-          "apiKey": "YOUR_API_KEY"
-        }
       },
       "intentFilters": [
         {
@@ -71,3 +64,4 @@
     }
   }
 }
+
