--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "expo": "~49.0.11",
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
+    "expo-google-app-auth": "~8.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
@@ -22,10 +26,12 @@
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.4.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
