--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-
+    "@types/react-native-vector-icons": "^6.4.15",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.2.2"
   },
