--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.11",
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
