--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.1",
     "child_process": "^1.0.2",
     "date-fns": "^2.30.0",
@@ -34,7 +36,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
