--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "axios": "^1.6.1",
-    "child_process": "^1.0.2",
-    "date-fns": "^2.30.0",
+    "axios": "^1.6.2",
     "expo": "~49.0.11",
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
@@ -30,21 +26,14 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.4.0",
-    "fs": "^0.0.1-security",
-    "gapi-client": "^0.0.3",
-    "googleapis": "^128.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.13.4",
-    "react-native-paper": "^5.11.1",
-    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6",
-    "stream": "^0.0.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
