Lpridepay 3 create firebase and o auth and setup the app to work with both (#3)
* Initial Setup

* Setup file structure with Ignite, and NativeBase.

* Updated README file

* Expo EAS setup, With Tempalate items and some test functions

* Revision on App Template, with navigation working

* Attempt to create login page, Failed at doing rounded triangle.png Added SVG, do not know how to use them

* Setup SVGs

* Login Banner Scaling

* Login Banner Text

* Setup Login Page

* Made "Sign In With Google" a <Pressable> not a <View>

* Setup the "Email Us!" Button

* Attempt to setup Firebase (I'm bad at coding)

* Set up Oauth Login (no sessionStorage yet)

* Start Async

* Switched to EAS from Expo Go.
Use eas build --profile development --platform ios to build for iphone

* test

Signed-off-by: big <hassanmohammad316@yahoo.com>

* Finished setting up OAuth and Firebase

Signed-off-by: big <hassanmohammad316@yahoo.com>

* forgot to add package-lock.json

Signed-off-by: big <hassanmohammad316@yahoo.com>

---------

Signed-off-by: big <hassanmohammad316@yahoo.com>
Co-authored-by: Algoltea <129240273+Algoltea@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+
+    "scheme": "pridepay",
+
+
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -14,20 +18,53 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
+
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
-    ]
+      "expo-router",
+      "@react-native-google-signin/google-signin"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.biglil.pridepay",
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": [
+          "mailto"
+        ]
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.biglil.pridepay",
+      "config": {
+      },
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "mailto",
+              "host": "biglildev@gmail.com"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ]
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "850c0a2d-bac8-4e08-8c54-e74d2b950a8a"
+      }
+    }
   }
 }
